# auto-caption

./: .gitignore  README.md  auto-caption.spec  cliff.toml  inference.py  main.py  pyproject.toml  renamer.py  requirements.txt
.github/workflows/: ci.yml  release.yml
data/: test_docx.docx
src/: inference.py  main.py  worker.py
src/backend/: base.py  llamacpp_backend.py  registry.py  transformers_backend.py
src/core/: cache.py  config.py  gpu.py  models.py  renamer.py  style.py  text_extract.py  worker.py
src/i18n/: __init__.py  en.json  fr.json
src/ui/: main_window.py  model_manager.py  progress_widget.py  prompt_manager.py  theme.py
tests/: conftest.py  test_backend.py  test_cache.py  test_config.py  test_gpu.py  test_i18n.py  test_models.py  test_renamer.py  test_style.py  test_text_extract.py  test_ui.py
