[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-caption"
version = "0.1.0"
description = "AI-powered file renaming using local multimodal LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Sylvain Daronnat" },
]
keywords = ["ai", "caption", "rename", "vlm", "pyside6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Utilities",
]
dependencies = [
    "PySide6>=6.5.0",
    "Pillow>=10.0.0",
    "huggingface_hub>=0.20.0",
    "python-docx>=1.0.0",
    "PyMuPDF>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.50.0",
    "accelerate>=0.25.0",
    "qwen-vl-utils>=0.0.8",
    "torchvision>=0.15.0",
]

[project.optional-dependencies]
llamacpp = ["llama-cpp-python>=0.3.0"]
dev = [
    "ruff>=0.4.0",
    "pyinstaller>=6.0.0",
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.urls]
Homepage = "https://github.com/daronnat/auto-caption"
Repository = "https://github.com/daronnat/auto-caption"
Issues = "https://github.com/daronnat/auto-caption/issues"
Changelog = "https://github.com/daronnat/auto-caption/releases"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
